--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "formik": "^2.4.3",
     "i18next": "^23.4.1",
     "next-i18next": "^14.0.0",
     "next-translate": "^2.5.2",
@@ -14,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
+    "react-phone-number-input": "^3.3.6",
     "react-router-dom": "6.11.2",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
