--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
     "styled-components": "^6.0.6",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
