--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-translate": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.3.6",
